Handle arguments that are flags correctly

https://bugzilla.gnome.org/show_bug.cgi?id=647581